--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <a id="user-content-1" href="#1">
 <div align="center">
 <a target="_blank" href="https://github.com/emcfkp3094/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/www.jpg"></a><br>
-<p><details><summary>个别情况打不开，请用<a href="https://github.com/emcfkp3094/www/blob/master/README.md?g#1">稳定版平台</a>。持续收看，请<a href="#8">下载翻墙软件</a>&nbsp;&nbsp;....<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></summary></p>
-建议用海外浏览器打开本平台，同时收藏网址:&nbsp;&nbsp;<a href="https://x.co/hua9">x.co/hua9</a>&nbsp;&nbsp;&nbsp;&nbsp;稳定版平台:&nbsp;&nbsp;<a href="https://git.io/xxxxt">git.io/xxxxt</a><br>  
+<p><details><summary>个别情况打不开，请用<a href="https://github.com/emcfkp3094/www/blob/master/README.md?t#1">稳定版平台</a>。持续收看，请<a href="#8">下载翻墙软件</a>&nbsp;&nbsp;....<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></summary></p>
+建议用海外浏览器打开本平台，同时收藏网址:&nbsp;&nbsp;<a href="https://x.co/faa">x.co/faa</a>&nbsp;&nbsp;&nbsp;&nbsp;稳定版平台:&nbsp;&nbsp;<a href="https://git.io/ctttt">git.io/ctttt</a><br>  
 </details>
 <br>
 <h1><p><strong>新闻热点 海外报道</strong></p></h1>
@@ -39,7 +39,7 @@
 <p><a href="https://github.com/emcfkp3094/djy/blob/master/gb/21/4/22/n12899045.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/反击党媒围攻 特斯拉抛“黑匣子”      >-009fcc?logoWidth=1" title="反击党媒围攻　特斯拉抛＂黑匣子＂　　　　>>" alt="反击党媒围攻　特斯拉抛＂黑匣子＂　　　　>>"></a></p>
 <p><a href="https://github.com/emcfkp3094/djy/blob/master/gb/21/4/23/n12900584.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/英议会：中共犯下“罪中之罪”        >-009fcc?logoWidth=1" title="英议会：中共犯下＂罪中之罪＂　　　　　　>>" alt="英议会：中共犯下＂罪中之罪＂　　　　　　>>"></a></p>
 <p><a href="https://github.com/emcfkp3094/djy/blob/master/gb/21/4/23/n12899281.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/专访余茂春：各国不谋而合反共 原因在中共  >-009fcc?logoWidth=1" title="专访余茂春：各国不谋而合反共　原因在中共>>" alt="专访余茂春：各国不谋而合反共　原因在中共>>"></a></p>
-<p><a href="https://github.com/emcfkp3094/djy/blob/master/gb/21/4/23/n12900990.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/党话听不懂 习近平“气候金句”搞懵美国人  >-009fcc?logoWidth=1" title="党话听不懂　习近平＂气候金句＂搞懵美国人>>" alt="党话听不懂　习近平＂气候金句＂搞懵美国人>>"></a></p>
+<p><a href="https://github.com/emcfkp3094/djy/blob/master/gb/21/4/23/n12900990.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/习近平“气候金句”太高深 蓬佩奥解读    >-009fcc?logoWidth=1" title="习近平＂气候金句＂太高深　蓬佩奥解读　　>>" alt="习近平＂气候金句＂太高深　蓬佩奥解读　　>>"></a></p>
 <p><a href="https://github.com/emcfkp3094/djy/blob/master/gb/21/4/22/n12898729.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/曾慧燕：我曾在世贸大楼专访李洪志先生    >-009fcc?logoWidth=1" title="曾慧燕：我曾在世贸大楼专访李洪志先生　　>>" alt="曾慧燕：我曾在世贸大楼专访李洪志先生　　>>"></a></p>
 <p><a href="https://github.com/emcfkp3094/djy/blob/master/gb/21/4/23/n12900216.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/一位曾坑蒙拐骗的小商贩 为何站到中南海前？ >-009fcc?logoWidth=1" title="一位曾坑蒙拐骗的小商贩　为何站到中南海前>>" alt="一位曾坑蒙拐骗的小商贩　为何站到中南海前>>"></a></p>
 <p><a href="https://github.com/emcfkp3094/djy/blob/master/gb/21/4/19/n12890122.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/民众接种中国疫苗后现罕见问题        >-009fcc?logoWidth=1" title="民众接种中国疫苗后现罕见问题　　　　　　>>" alt="民众接种中国疫苗后现罕见问题　　　　　　>>"></a></p>
@@ -249,9 +249,9 @@
 
 <h1><strong>其它的真相媒体</strong></h1>
 <p><details><summary><a target="_blank" href="https://emcfkp3094.github.io/vd/wm.html?from=nayunhai_852">网门动态临时版</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></p></summary>
-<p><a target="_blank" href="https://github.com/odoor3/oo/blob/master/README.md?mrpcb">网门软件下载</a></p>
+<p><a target="_blank" href="https://github.com/odoor3/oo/blob/master/README.md?asamr">网门软件下载</a></p>
 </details>
-<p><details><summary><a target="_blank" href="https://github.com/gfw-breaker/banned-news1/blob/master/README.md?riodw">其它的新闻同步</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></p></summary>
+<p><details><summary><a target="_blank" href="https://github.com/gfw-breaker/banned-news1/blob/master/README.md?yrcep">其它的新闻同步</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></p></summary>
 <details><summary>看中国新闻网</summary>
 <br><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="https://github.com/gfw-breaker/banned-news1/blob/master/indexes/S看大陆.md?t=02121122">看大陆</a></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="https://github.com/gfw-breaker/banned-news1/blob/master/indexes/S看官场.md?t=02121122">看官场</a></p>
@@ -295,8 +295,8 @@
 </details>
 </details>
 <p><details><summary><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/README.md#%E6%98%8E%E6%85%A7%E6%9C%9F%E5%88%8A">在线看明慧期刊</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></p></summary>
-<p><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/README.md?brbtq">明慧期刊</a></p>
-<p><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/pages/special.md?jczph">明慧特刊</a></p>
+<p><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/README.md?lrrux">明慧期刊</a></p>
+<p><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/pages/special.md?emujz">明慧特刊</a></p>
 </details>
 
 <p><details><summary><a target="_blank" href="https://github.com/hao2369/a/wiki/jyg">聚缘阁网页代理</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://gitlab.com/szzdlab/www/raw/master/23ec.png"/></p></summary>
@@ -484,10 +484,10 @@
 </strong></p>
 <div align="center">
 <hr>
-<p><strong><a href="https://github.com/emcfkp3094/djy/blob/master/gb/about-djy.md#1">大纪元时报投稿</a>&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;<a href="https://github.com/emcfkp3094/ntdtv/blob/master/gb/contribute.md?x#1">新唐人电视投稿</a>&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;<a href="https://github.com/emcfkp3094/www/blob/master/README.md?e#1">稳定版平台</a></strong></p>
-<h4>手机上长按并复制下列网址或二维码分享本平台：</h4><a href="https://ghcdn.rawgit.org/emcfkp3094/www/master/index.html?t">https://ghcdn.rawgit.org/emcfkp3094/www/master/index.html?m</a><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://ghcdn.rawgit.org/emcfkp3094/www/master/index.html?w" title="分享本平台"></img>
+<p><strong><a href="https://github.com/emcfkp3094/djy/blob/master/gb/about-djy.md#1">大纪元时报投稿</a>&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;<a href="https://github.com/emcfkp3094/ntdtv/blob/master/gb/contribute.md?x#1">新唐人电视投稿</a>&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;<a href="https://github.com/emcfkp3094/www/blob/master/README.md?m#1">稳定版平台</a></strong></p>
+<h4>手机上长按并复制下列网址或二维码分享本平台：</h4><a href="https://ghcdn.rawgit.org/emcfkp3094/www/master/index.html?m">https://ghcdn.rawgit.org/emcfkp3094/www/master/index.html?k</a><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://ghcdn.rawgit.org/emcfkp3094/www/master/index.html?z" title="分享本平台"></img>
 </div>
-<div align="center">短网址: <a href="https://x.co/hua9">x.co/hua9</a></div> 
+<div align="center">短网址: <a href="https://x.co/faa">x.co/faa</a></div> 
 
 </body>
 </html>
