--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <a id="user-content-1" href="#1">
 <div align="center">
 <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/www.jpg"></a><br>
-<p><details><summary>个别情况打不开，请用<a href="https://github.com/ezkcme3586/www/blob/master/README.md?t#1">稳定版平台</a>。持续收看，请<a href="#8">下载翻墙软件</a>&nbsp;&nbsp;....<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></summary></p>
-建议用海外浏览器打开本平台，同时收藏网址:&nbsp;&nbsp;<a href="https://x.co/u66">x.co/u66</a>&nbsp;&nbsp;&nbsp;&nbsp;稳定版平台:&nbsp;&nbsp;<a href="https://git.io/gggg3">git.io/gggg3</a><br>  
+<p><details><summary>个别情况打不开，请用<a href="https://github.com/ezkcme3586/www/blob/master/README.md?v#1">稳定版平台</a>。持续收看，请<a href="#8">下载翻墙软件</a>&nbsp;&nbsp;....<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></summary></p>
+建议用海外浏览器打开本平台，同时收藏网址:&nbsp;&nbsp;<a href="https://x.co/raa">x.co/raa</a>&nbsp;&nbsp;&nbsp;&nbsp;稳定版平台:&nbsp;&nbsp;<a href="https://git.io/9zzzz">git.io/9zzzz</a><br>  
 </details>
 <br>
 <h1><p><strong>新闻热点 海外报道</strong></p></h1>
@@ -41,7 +41,7 @@
 <p><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/9/n12934094.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/王赫：中共对澳经济胁迫伎俩踢到钢板     >-009fcc?logoWidth=1" title="王赫：中共对澳经济胁迫伎俩踢到钢板　　　>>" alt="王赫：中共对澳经济胁迫伎俩踢到钢板　　　>>"></a></p>
 <p><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/8/n12933355.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/美中角力 美军演习无人机群首次摧毁舰艇   >-009fcc?logoWidth=1" title="美中角力　美军演习无人机群首次摧毁舰艇　>>" alt="美中角力　美军演习无人机群首次摧毁舰艇　>>"></a></p>
 <p><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/8/n12933638.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/习加紧造神 高官知中共内情急退党      >-009fcc?logoWidth=1" title="习加紧造神　高官知中共内情急退党　　　　>>" alt="习加紧造神　高官知中共内情急退党　　　　>>"></a></p>
-<p><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/7/n12932045.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/中共为何放过马化腾？            >-009fcc?logoWidth=1" title="中共为何放过马化腾？　　　　　　　　　　>>" alt="中共为何放过马化腾？　　　　　　　　　　>>"></a></p>
+<p><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/8/n12933364.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/阿里巴巴比利时机场建物流枢纽 被忧间谍隐患 >-009fcc?logoWidth=1" title="阿里巴巴比利时机场建物流枢纽　被忧间谍隐>>" alt="阿里巴巴比利时机场建物流枢纽　被忧间谍隐>>"></a></p>
 <p><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/4/13/n12878121.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/中共偷偷删除网上军民融合信息        >-009fcc?logoWidth=1" title="中共偷偷删除网上军民融合信息　　　　　　>>" alt="中共偷偷删除网上军民融合信息　　　　　　>>"></a></p>
 <p><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/9/n12934052.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/中共副国级高官的贴身随从退党        >-009fcc?logoWidth=1" title="中共副国级高官的贴身随从退党　　　　　　>>" alt="中共副国级高官的贴身随从退党　　　　　　>>"></a></p>
 <p><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/9/n12934093.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/杭州3只金钱豹外逃搜捕信息混乱 1只仍在逃 >-009fcc?logoWidth=1" title="杭州３只金钱豹外逃搜捕信息混乱　１只仍在>>" alt="杭州３只金钱豹外逃搜捕信息混乱　１只仍在>>"></a></p>
@@ -250,9 +250,9 @@
 
 <h1><strong>其它的真相媒体</strong></h1>
 <p><details><summary><a target="_blank" href="https://ezkcme3586.github.io/vd/wm.html?from=nayunhai_852">网门动态临时版</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></p></summary>
-<p><a target="_blank" href="https://github.com/odoor3/oo/blob/master/README.md?rtouj">网门软件下载</a></p>
+<p><a target="_blank" href="https://github.com/odoor3/oo/blob/master/README.md?caldu">网门软件下载</a></p>
 </details>
-<p><details><summary><a target="_blank" href="https://github.com/gfw-breaker/banned-news1/blob/master/README.md?vuzdu">其它的新闻同步</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></p></summary>
+<p><details><summary><a target="_blank" href="https://github.com/gfw-breaker/banned-news1/blob/master/README.md?cvavv">其它的新闻同步</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></p></summary>
 <details><summary>看中国新闻网</summary>
 <br><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="https://github.com/gfw-breaker/banned-news1/blob/master/indexes/S看大陆.md?t=02121122">看大陆</a></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="https://github.com/gfw-breaker/banned-news1/blob/master/indexes/S看官场.md?t=02121122">看官场</a></p>
@@ -296,8 +296,8 @@
 </details>
 </details>
 <p><details><summary><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/README.md#%E6%98%8E%E6%85%A7%E6%9C%9F%E5%88%8A">在线看明慧期刊</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></p></summary>
-<p><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/README.md?lavjs">明慧期刊</a></p>
-<p><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/pages/special.md?wgbqy">明慧特刊</a></p>
+<p><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/README.md?diaky">明慧期刊</a></p>
+<p><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/pages/special.md?gvedh">明慧特刊</a></p>
 </details>
 
 <p><details><summary><a target="_blank" href="https://github.com/hao2369/a/wiki/jyg">聚缘阁网页代理</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://gitlab.com/szzdlab/www/raw/master/23ec.png"/></p></summary>
@@ -485,10 +485,10 @@
 </strong></p>
 <div align="center">
 <hr>
-<p><strong><a href="https://github.com/ezkcme3586/djy/blob/master/gb/about-djy.md#1">大纪元时报投稿</a>&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;<a href="https://github.com/ezkcme3586/ntdtv/blob/master/gb/contribute.md?h#1">新唐人电视投稿</a>&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;<a href="https://github.com/ezkcme3586/www/blob/master/README.md?o#1">稳定版平台</a></strong></p>
-<h4>手机上长按并复制下列网址或二维码分享本平台：</h4><a href="https://ghcdn.rawgit.org/ezkcme3586/www/master/index.html?h">https://ghcdn.rawgit.org/ezkcme3586/www/master/index.html?u</a><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://ghcdn.rawgit.org/ezkcme3586/www/master/index.html?q" title="分享本平台"></img>
+<p><strong><a href="https://github.com/ezkcme3586/djy/blob/master/gb/about-djy.md#1">大纪元时报投稿</a>&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;<a href="https://github.com/ezkcme3586/ntdtv/blob/master/gb/contribute.md?t#1">新唐人电视投稿</a>&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;<a href="https://github.com/ezkcme3586/www/blob/master/README.md?d#1">稳定版平台</a></strong></p>
+<h4>手机上长按并复制下列网址或二维码分享本平台：</h4><a href="https://ghcdn.rawgit.org/ezkcme3586/www/master/index.html?f">https://ghcdn.rawgit.org/ezkcme3586/www/master/index.html?s</a><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://ghcdn.rawgit.org/ezkcme3586/www/master/index.html?j" title="分享本平台"></img>
 </div>
-<div align="center">短网址: <a href="https://x.co/u66">x.co/u66</a></div> 
+<div align="center">短网址: <a href="https://x.co/raa">x.co/raa</a></div> 
 
 </body>
 </html>
