--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <a id="user-content-1" href="#1">
 <div align="center">
 <a target="_blank" href="https://github.com/xtzchx376/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/www.jpg"></a><br>
-<p><details><summary>个别情况打不开，请用<a href="https://github.com/xtzchx376/www/blob/master/README.md?l#1">稳定版平台</a>。持续收看，请<a href="#8">下载翻墙软件</a>&nbsp;&nbsp;....<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></summary></p>
-建议用海外浏览器打开本平台，同时收藏网址:&nbsp;&nbsp;<a href="https://vu.fr/aaabbb">vu.fr/aaabbb</a>&nbsp;&nbsp;&nbsp;&nbsp;稳定版平台:&nbsp;&nbsp;<a href="https://git.io/dddddddd">git.io/dddddddd</a><br>  
+<p><details><summary>个别情况打不开，请用<a href="https://github.com/xtzchx376/www/blob/master/README.md?y#1">稳定版平台</a>。持续收看，请<a href="#8">下载翻墙软件</a>&nbsp;&nbsp;....<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></summary></p>
+建议用海外浏览器打开本平台，同时收藏网址:&nbsp;&nbsp;<a href="https://cut.gy/bbbccc">cut.gy/bbbccc</a>&nbsp;&nbsp;&nbsp;&nbsp;稳定版平台:&nbsp;&nbsp;<a href="https://git.io/zqqqq">git.io/zqqqq</a><br>  
 </details>
 <br>
 <h1><p><strong>新闻热点 海外报道</strong></p></h1>
@@ -41,12 +41,12 @@
 <p><a href="https://github.com/xtzchx376/djy/blob/master/gb/21/5/14/n12949491.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/中国药厂吹捧新药疗效 美专家：说法矛盾很可疑>-009fcc?logoWidth=1" title="中国药厂吹捧新药疗效　美专家：说法矛盾很>>" alt="中国药厂吹捧新药疗效　美专家：说法矛盾很>>"></a></p>
 <p><a href="https://github.com/xtzchx376/djy/blob/master/gb/21/5/15/n12951594.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/网文：地方财政收入下降 房地产依然是依靠  >-009fcc?logoWidth=1" title="网文：地方财政收入下降　房地产依然是依靠>>" alt="网文：地方财政收入下降　房地产依然是依靠>>"></a></p>
 <p><a href="https://github.com/xtzchx376/djy/blob/master/gb/21/5/14/n12950325.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/分析：习近平给《文史哲》回信释放何信号？  >-009fcc?logoWidth=1" title="分析：习近平给《文史哲》回信释放何信号？>>" alt="分析：习近平给《文史哲》回信释放何信号？>>"></a></p>
-<p><a href="https://github.com/xtzchx376/djy/blob/master/gb/21/5/14/n12950665.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/分析：特斯拉在中国的状况或比预想还惨    >-009fcc?logoWidth=1" title="分析：特斯拉在中国的状况或比预想还惨　　>>" alt="分析：特斯拉在中国的状况或比预想还惨　　>>"></a></p>
+<p><a href="https://github.com/xtzchx376/djy/blob/master/gb/21/5/14/n12950837.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/山东省政法委副书记被查 其特殊身份被凸显  >-009fcc?logoWidth=1" title="山东省政法委副书记被查　其特殊身份被凸显>>" alt="山东省政法委副书记被查　其特殊身份被凸显>>"></a></p>
 <p><a href="https://github.com/xtzchx376/djy/blob/master/gb/21/4/13/n12878121.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/中共偷偷删除网上军民融合信息        >-009fcc?logoWidth=1" title="中共偷偷删除网上军民融合信息　　　　　　>>" alt="中共偷偷删除网上军民融合信息　　　　　　>>"></a></p>
 <p><a href="https://github.com/xtzchx376/djy/blob/master/gb/21/5/14/n12950591.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/习近平问群众“怎知我来” 网友：对话好尴尬 >-009fcc?logoWidth=1" title="习近平问群众＂怎知我来＂　网友：对话好尴>>" alt="习近平问群众＂怎知我来＂　网友：对话好尴>>"></a></p>
-<p><a href="https://github.com/xtzchx376/djy/blob/master/gb/21/5/15/n12951059.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/分析：胡春华随习考察背后有因        >-009fcc?logoWidth=1" title="分析：胡春华随习考察背后有因　　　　　　>>" alt="分析：胡春华随习考察背后有因　　　　　　>>"></a></p>
 <p><a href="https://github.com/xtzchx376/djy/blob/master/gb/21/5/15/n12952372.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/北京湖北现安徽病例密接者 皖辽12地升中风险>-009fcc?logoWidth=1" title="北京湖北现安徽病例密接者　皖辽１２地升中>>" alt="北京湖北现安徽病例密接者　皖辽１２地升中>>"></a></p>
-<p><a href="https://github.com/xtzchx376/djy/blob/master/gb/21/5/14/n12950858.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/美新制裁悄出台 中国3地疫情中风险     >-009fcc?logoWidth=1" title="美新制裁悄出台　中国３地疫情中风险　　　>>" alt="美新制裁悄出台　中国３地疫情中风险　　　>>"></a></p>
+<p><a href="https://github.com/xtzchx376/djy/blob/master/gb/21/5/14/n12950665.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/分析：特斯拉在中国的状况或比预想还惨    >-009fcc?logoWidth=1" title="分析：特斯拉在中国的状况或比预想还惨　　>>" alt="分析：特斯拉在中国的状况或比预想还惨　　>>"></a></p>
+<p><a href="https://github.com/xtzchx376/djy/blob/master/gb/21/5/15/n12951059.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/分析：胡春华随习考察背后有因        >-009fcc?logoWidth=1" title="分析：胡春华随习考察背后有因　　　　　　>>" alt="分析：胡春华随习考察背后有因　　　　　　>>"></a></p>
 <details><summary>更多....&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/><br></summary>
 <p><a href="https://github.com/xtzchx376/djy/blob/master/gb/21/5/13/n12947433.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/专访余茂春：中共统治模式威胁世界      >-009fcc?logoWidth=1" title="专访余茂春：中共统治模式威胁世界　　　　>>" alt="专访余茂春：中共统治模式威胁世界　　　　>>"></a></p>
 <p><a href="https://github.com/xtzchx376/djy/blob/master/gb/21/5/13/n12947211.md#1" target=_blank><img width="330" height="30" src="https://img.shields.io/badge/全球疫苗接种最高的两国家 疫情走势两级   >-009fcc?logoWidth=1" title="全球疫苗接种最高的两国家　疫情走势两级　>>" alt="全球疫苗接种最高的两国家　疫情走势两级　>>"></a></p>
@@ -249,9 +249,9 @@
 
 <h1><strong>其它的真相媒体</strong></h1>
 <p><details><summary><a target="_blank" href="https://xtzchx376.github.io/vd/wm.html?from=nayunhai_852">网门动态临时版</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></p></summary>
-<p><a target="_blank" href="https://github.com/odoor3/oo/blob/master/README.md?jymuy">网门软件下载</a></p>
+<p><a target="_blank" href="https://github.com/odoor3/oo/blob/master/README.md?lzegf">网门软件下载</a></p>
 </details>
-<p><details><summary><a target="_blank" href="https://github.com/gfw-breaker/banned-news1/blob/master/README.md?ydsai">其它的新闻同步</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></p></summary>
+<p><details><summary><a target="_blank" href="https://github.com/gfw-breaker/banned-news1/blob/master/README.md?gotqq">其它的新闻同步</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></p></summary>
 <details><summary>看中国新闻网</summary>
 <br><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="https://github.com/gfw-breaker/banned-news1/blob/master/indexes/S看大陆.md?t=02121122">看大陆</a></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="https://github.com/gfw-breaker/banned-news1/blob/master/indexes/S看官场.md?t=02121122">看官场</a></p>
@@ -295,8 +295,8 @@
 </details>
 </details>
 <p><details><summary><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/README.md#%E6%98%8E%E6%85%A7%E6%9C%9F%E5%88%8A">在线看明慧期刊</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://github.com/images/icons/emoji/unicode/23ec.png"/></p></summary>
-<p><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/README.md?zebrh">明慧期刊</a></p>
-<p><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/pages/special.md?jaciz">明慧特刊</a></p>
+<p><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/README.md?ovpym">明慧期刊</a></p>
+<p><a target="_blank" href="https://github.com/gfw-breaker/mh-qikan/blob/master/pages/special.md?fsikj">明慧特刊</a></p>
 </details>
 
 <p><details><summary><a target="_blank" href="https://github.com/hao2369/a/wiki/jyg">聚缘阁网页代理</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="20" src="https://gitlab.com/szzdlab/www/raw/master/23ec.png"/></p></summary>
@@ -484,10 +484,10 @@
 </strong></p>
 <div align="center">
 <hr>
-<p><strong><a href="https://github.com/xtzchx376/djy/blob/master/gb/about-djy.md#1">大纪元时报投稿</a>&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;<a href="https://github.com/xtzchx376/ntdtv/blob/master/gb/contribute.md?f#1">新唐人电视投稿</a>&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;<a href="https://github.com/xtzchx376/www/blob/master/README.md?y#1">稳定版平台</a></strong></p>
-<h4>手机上长按并复制下列网址或二维码分享本平台：</h4><a href="https://ghcdn.rawgit.org/xtzchx376/www/master/index.html?i">https://ghcdn.rawgit.org/xtzchx376/www/master/index.html?j</a><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://ghcdn.rawgit.org/xtzchx376/www/master/index.html?q" title="分享本平台"></img>
+<p><strong><a href="https://github.com/xtzchx376/djy/blob/master/gb/about-djy.md#1">大纪元时报投稿</a>&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;<a href="https://github.com/xtzchx376/ntdtv/blob/master/gb/contribute.md?w#1">新唐人电视投稿</a>&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;&nbsp;&#160;<a href="https://github.com/xtzchx376/www/blob/master/README.md?f#1">稳定版平台</a></strong></p>
+<h4>手机上长按并复制下列网址或二维码分享本平台：</h4><a href="https://ghcdn.rawgit.org/xtzchx376/www/master/index.html?e">https://ghcdn.rawgit.org/xtzchx376/www/master/index.html?z</a><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://ghcdn.rawgit.org/xtzchx376/www/master/index.html?x" title="分享本平台"></img>
 </div>
-<div align="center">短网址: <a href="https://vu.fr/aaabbb">vu.fr/aaabbb</a></div> 
+<div align="center">短网址: <a href="https://cut.gy/bbbccc">cut.gy/bbbccc</a></div> 
 
 </body>
 </html>
